force-app/main/default/objects/HAM_Group_Setting__mdt/HAM_Group_Setting__mdt.object-meta.xml
<CustomObject>
    <description>setting to control portals group feature polling and jitter time</description>
    <label>HAM Group Setting</label>
    <pluralLabel>HAM Group Settings</pluralLabel>
</CustomObject>