force-app/main/default/objects/HAM_Group_Setting__mdt/fields/Base_Polling_Interval_ms__c.field-meta.xml
<CustomField>
    <fullName>Base_Polling_Interval_ms__c</fullName>
    <label>Base_Polling_Interval_ms</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>