force-app/main/default/objects/HAM_Group_Setting__mdt/fields/Cache_TTL_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Cache_TTL_Seconds__c</fullName>
    <label>Cache_TTL_Seconds</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>