force-app/main/default/objects/HAM_Group_Setting__mdt/fields/Enable_Media_Uploads__c.field-meta.xml
<CustomField>
    <fullName>Enable_Media_Uploads__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable_Media_Uploads</label>
    <type>Checkbox</type>
</CustomField>