force-app/main/default/objects/HAM_Group_Setting__mdt/fields/Feed_Pagination_Size__c.field-meta.xml
<CustomField>
    <fullName>Feed_Pagination_Size__c</fullName>
    <label>Feed_Pagination_Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>