force-app/main/default/objects/HAM_Group_Setting__mdt/fields/Polling_Jitter_Max_ms__c.field-meta.xml
<CustomField>
    <fullName>Polling_Jitter_Max_ms__c</fullName>
    <label>Polling_Jitter_Max_ms</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>